--- a/Ikeyboy-styles.css
+++ b/Ikeyboy-styles.css
@@ -221,24 +221,26 @@ body {
 
 /* CSS Grid Formating Begins */
 
+.grid-section{
+  width:100%;
+  justify-content: center;
+  padding-left: 15px;
+  padding-right: 15px; 
+  margin-bottom: 20px;
+  margin-top: 30px;
+  padding: 30px, 0, 30px, 0;
+}
   .style-types{
     height: 100%;
-    width:100%;
     display: grid;
-    border: 10px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows:repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     grid-gap: 10px 10px;
-    justify-content: center;
-    padding-left: 15px;
-    padding-right: 15px; 
-    margin-bottom: 20px;
-    margin-top: 0px;
+  
   }
 
 
 
- 
 
 
   /* Item Layout ----ART-----> */
@@ -267,8 +269,8 @@ transition: transform 0.3s ease;
  }
 
 .item-3{
-grid-row: 2/3;
-grid-column: 1/2;
+grid-row: 1/2;
+grid-column: 3/4;
 }
 .item-3:hover{
   transform: scale(0.8);
@@ -289,6 +291,7 @@ grid-column: 2/3;
   transition: transform 0.3s ease;
 
  }
+
 
 
 /* Item Layout END----ART-----> */
