--- a/Ikeyboy-styles.css
+++ b/Ikeyboy-styles.css
@@ -193,9 +193,9 @@ body {
   font-weight: 700;
   font-size: 0.625rem;
   color: var(--light001);
-  background-color: 9AD0B0;
+  background-color: #9AD0B0;
   border-radius: 50px;
-  border: 2px solid 9AD0B0;
+  border: 2px solid #9AD0B0;
   padding: 16px 48px;
   transition-property: background-color, color;
   transition-duration: 0.3s;
