--- a/Ikeyboy-styles.css
+++ b/Ikeyboy-styles.css
@@ -192,7 +192,7 @@ body {
   font-family: Open Sans, sans-serif;
   font-weight: 700;
   font-size: 0.625rem;
-  color: var(--light001);
+  color: var(--dark001);
   background-color: #9AD0B0;
   border-radius: 50px;
   border: 2px solid #9AD0B0;
