--- a/Ikeyboy-styles.css
+++ b/Ikeyboy-styles.css
@@ -195,9 +195,9 @@ body {
   font-weight: 700;
   font-size: 0.625rem;
   color: var(--dark001);
-  background-color: #7dc499;
+  background-color: #9AAFD0;
   border-radius: 50px;
-  border: 2px solid var(--dark001);
+  border: 2px solid #9AAFD0;
   padding: 16px 48px;
   transition-property: background-color, color;
   transition-duration: 0.3s;
