--- a/ikeyboydesigns-stylesheet.css
+++ b/ikeyboydesigns-stylesheet.css
@@ -162,6 +162,36 @@ body {
   margin-bottom: 48px;
 }
 
+/* new button color  */
+.info__cta-1 {
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: Open Sans, sans-serif;
+  font-weight: 700;
+  font-size: 0.625rem;
+  color: var(--dark001);
+  background-color: #7dc499;
+  border-radius: 50px;
+  border: 2px solid #7dc499;
+  padding: 16px 48px;
+  transition-property: background-color, color;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+}
+
+.info__cta-1:hover {
+  background-color: #FFE417;
+  color: var(--dark001);
+}
+
+.info__cta-1:focus,
+.info__cta-1:active {
+  background-color: var(--light001);
+  color: var(--dark001);
+  outline: 5px solid var(--red001);
+}
+/* new button color end */
 .info__cta {
   display: inline-block;
   text-decoration: none;
