--- a/ikeyboydesigns-stylesheet.css
+++ b/ikeyboydesigns-stylesheet.css
@@ -228,11 +228,17 @@ body {
 
 
 /* CSS Grid Formating Begins */
-.title-contain{
-  padding-left:  5rem ;
-  padding-top: 0rem;
-  margin-bottom: 0rem;
+.grid-section{
+  width:100%;
+  justify-content: center;
+  padding-left: 15px;
+  padding-right: 15px; 
+  margin-bottom: 20px;
+  margin-top: 30px;
+  padding: 30px, 0, 30px, 0;
 }
+
+
 .title-section{
   padding: 0;
   margin-left: 50px;
@@ -244,7 +250,6 @@ body {
   font-family: Open Sans, sans-serif;
   font-weight: 700;
   text-align: center;
-  border: 5px solid black;
   align-items: center;
   margin-bottom: 0px;
 }
@@ -259,12 +264,7 @@ body {
       grid-template-columns: repeat(3, 2fr);
       grid-template-rows:repeat(3, 1fr);
       grid-gap: 10px 10px;
-      justify-content: center;
-      padding-left: 15px;
-      padding-right: 15px; 
-      transform: scale(0.85);
-      margin-bottom: 20px;
-      margin-top: 0px;
+    
   }
 
 .item-1{
