--- a/portfolio.css
+++ b/portfolio.css
@@ -232,6 +232,7 @@ margin-top: 2.5rem;
 
       }
       .column-p{
+        display: flex;
         padding-right: 0px;
         margin-top: 30px;
         margin-left: 5rem ;
