--- a/portfolio.css
+++ b/portfolio.css
@@ -197,15 +197,103 @@ body {
 /* Column hod */
 .column-holder{
   height: 100%;
-  display: grid;
-column-width: 100%;
-grid-template-columns: repeat(2, 1fr);
-grid-template-rows: repeat(2, 1fr); 
-grid-gap:3px ;
-margin-top: 2rem;
-
-
-}
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  margin-top: 50px;
+  }
+  
+  .col {
+    width: 100%;
+    padding-right: 20px;
+    box-sizing: border-box;
+  }
+  
+  .col-xs-11 {width: 91.662%}
+  .col-xs-10 {width: 83.332%;}
+  .col-xs-9 {width: 75%;}
+  .col-xs-8 {width: 66.662%;}
+  .col-xs-7 {width: 58.331%}
+  .col-xs-6 {width: 50%;}
+  .col-xs-5 {width: 41.662%}
+  .col-xs-4 {width: 33.332%;}
+  .col-xs-3 {width: 25%;}
+  .col-xs-2 {width: 16.662%;}
+  .col-xs-1 {width: 8.332%;}
+  
+  @media screen and (min-width: 768px) {
+  
+    .column-holder{
+      height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    box-sizing: border-box;
+    margin-top: 50px;
+    }
+  
+    .col {
+      padding-right: 40px;
+    }
+  
+    
+    .col-sm-11 {width: 91.662%}
+    .col-sm-10 {width: 83.332%;}
+    .col-sm-9 {width: 75%;}
+    .col-sm-8 {width: 66.662%;}
+    .col-sm-7 {width: 58.331%}
+    .col-sm-6 {width: 50%;}
+    .col-sm-5 {width: 41.662%}
+    .col-sm-4 {width: 33.332%;}
+    .col-sm-3 {width: 25%;}
+    .col-sm-2 {width: 16.662%;}
+    .col-sm-1 {width: 8.332%;}
+  }
+  
+  @media screen and (min-width: 1024px) {
+  
+    .column-holder{
+      height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    box-sizing: border-box;
+    margin-top: 50px;
+    }
+  
+    .col-md-11 {width: 91.662%}
+    .col-md-10 {width: 83.332%;}
+    .col-md-9 {width: 75%;}
+    .col-md-8 {width: 66.662%;}
+    .col-md-7 {width: 58.331%}
+    .col-md-6 {width: 50%;}
+    .col-md-5 {width: 41.662%}
+    .col-md-4 {width: 33.332%;}
+    .col-md-3 {width: 25%;}
+    .col-md-2 {width: 16.662%;}
+    .col-md-1 {width: 8.332%;}
+  }
+  
+  @media screen and (min-width: 1280px) {
+  
+    .column-holder{
+      height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    box-sizing: border-box;
+    margin-top: 50px;
+    }
+    
+    .col-lg-11 {width: 91.662%}
+    .col-lg-10 {width: 83.332%;}
+    .col-lg-9 {width: 75%;}
+    .col-lg-8 {width: 66.662%;}
+    .col-lg-7 {width: 58.331%}
+    .col-lg-6 {width: 50%;}
+    .col-lg-5 {width: 41.662%}
+    .col-lg-4 {width: 33.332%;}
+    .col-lg-3 {width: 25%;}
+    .col-lg-2 {width: 16.662%;}
+    .col-lg-1 {width: 8.332%;}
+  }
 
 .info__subtext {
   font-family: Open Sans, sans-serif;
@@ -235,7 +323,12 @@ margin-top: 2.5rem;
         margin-left: 5rem ;
         margin-right: 4rem;
         padding-right: 30px;
+      }
 
+
+      @media screen and (max-width: 600px) {
+
+        
       }
 /*  logo images */
 
