--- a/portfolio.css
+++ b/portfolio.css
@@ -337,7 +337,8 @@ margin-top: 2.5rem;
     grid-column:1/2 ;
     max-width: 100%;
     height: auto;
-    transform: scale(0.50)
+    transform: scale(0.50);
+    padding-left: 30px;
    
 }
     
@@ -359,6 +360,7 @@ margin-top: 2.5rem;
     grid-column: 1/2 ;
       max-width: 100%;
       height: auto;
+      padding-right: 30px;
       
       transform: scale(0.50)
   }
