--- a/Ikeyboy-styles.css
+++ b/Ikeyboy-styles.css
@@ -73,7 +73,6 @@ body {
 }
 
 
-/*  logo images 
 
     .column{
     max-width: 100%;
@@ -253,21 +252,23 @@ body {
 /* CSS Grid Formating Begins */
 
 .grid-section{
-  width:100%;
-  justify-content: center;
-  padding-left: 15px;
-  padding-right: 15px; 
-  margin-bottom: 20px;
-  margin-top: 30px;
-  padding: 30px, 0, 30px, 0;
-}
-  .style-types{
-    height: 100%;
+  max-width: 90%;
+  align-content: center;
+  margin-left: 40px;
+  margin-right: 40px;}
+
+  .grid{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-gap: 10px 10px;
-  
+    grid-template-columns: reapeat(3, 200px);
+    justify-content: center;
+    align-content: center;
+    grid-gap: 10px;
+  }
+
+  .grid img{
+    width: 200px;
+    height: span;
+    cursor: pointer;
   }
 
 
@@ -283,7 +284,7 @@ grid-column: 1/2;
 transform: scale(0.8);
 border-radius: 0px;
 position:relative;
-transition: transform 0.3s ease;
+transition: transform 0.5s ease;
 
 
 }
@@ -295,7 +296,7 @@ grid-column: 2/3;
   transform: scale(0.8);
 border-radius: 0px;
 position:relative;
-transition: transform 0.3s ease;
+transition: transform 0.5s ease;
 
  }
 
@@ -307,7 +308,7 @@ grid-column: 3/4;
   transform: scale(0.8);
   border-radius: 0px;
   position:relative;
-  transition: transform 0.3s ease;
+  transition: transform 0.5s ease;
 
  }
 
@@ -319,7 +320,7 @@ grid-column: 2/3;
   transform: scale(0.8);
   border-radius: 0px;
   position:relative;
-  transition: transform 0.3s ease;
+  transition: transform 0.5s ease;
 
  }
 
@@ -327,7 +328,32 @@ grid-column: 2/3;
 
 /* Item Layout END----ART-----> */
 
+/*
+LIGHTBOX STLYING WITH JAVA SCRIPT
+*/
+#lightbox{
+  position:fixed;
+  z-index:1000;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,.8);
+  display: none;
+}
 
+#lightbox.active {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#lightbox img{
+  max-width: 90%;
+  max-height: 80%;
+  padding: 8px;
+  border: 2px solid #FFE417;
+  border-radius: 75px;
+}
 
 
 
