--- a/ikeyboydesigns-stylesheet.css
+++ b/ikeyboydesigns-stylesheet.css
@@ -73,10 +73,6 @@ body {
 }
 
 
-/*  logo images  */
-
-
-/*  ending logo images */
 
 .main-nav {
   position: absolute;
@@ -228,18 +224,23 @@ body {
 
 
 /* CSS Grid Formating Begins */
+
+
 .grid-section{
-  width:100%;
-  justify-content: center;
-  padding-left: 15px;
-  padding-right: 15px; 
-  margin-bottom: 20px;
-  margin-top: 30px;
-  padding: 30px, 0, 30px, 0;
+  max-width: 90%;
+  align-content: center;
+  margin-left: 40px;
+  margin-right: 40px;
+
+  
 }
 
 
-.title-section{
+
+  /* Item Layout 
+  
+  
+  .title-section{
   padding: 0;
   margin-left: 50px;
   margin-right: 50px;
@@ -252,24 +253,29 @@ body {
   text-align: center;
   align-items: center;
   margin-bottom: 0px;
+  
+  ----ART-----> */
+#text-head{
+text-align: center;
+margin:0 ;
 }
 
-  /* Item Layout ----ART-----> */
 
-  .art-types
-  {height: 100%;
-    width:100%;
-      display: grid;
-      border: 10px;
-      grid-template-columns: repeat(3, 2fr);
-      grid-template-rows:repeat(3, 1fr);
-      grid-gap: 10px 10px;
-      padding-left: 15px;
-      padding-right: 15px; 
-      margin-bottom: 20px;
-      margin-top: 0px;
+  .grid{
+    display: grid;
+    grid-template-columns: reapeat(3, 200px);
+    justify-content: center;
+    align-content: center;
+    grid-gap: 10px;
   }
 
+  .grid img{
+    width: 200px;
+    height: span;
+    cursor: pointer;
+  }
+
+  
 .item-1{
 grid-row: 1/2 ;
 grid-column: 1/4;
@@ -278,7 +284,7 @@ grid-column: 1/4;
 transform: scale(0.8);
 border-radius: 0px;
 position:relative;
-transition: transform 0.3s ease;
+transition: transform 0.5s ease;
 
 
 }
@@ -290,7 +296,7 @@ grid-column: 1/2;
   transform: scale(0.8);
 border-radius: 0px;
 position:relative;
-transition: transform 0.3s ease;
+transition: transform 0.5s ease;
 
  }
 
@@ -302,7 +308,7 @@ grid-column: 2/3;
   transform: scale(0.8);
   border-radius: 0px;
   position:relative;
-  transition: transform 0.3s ease;
+  transition: transform 0.5s ease;
 
  }
 
@@ -314,7 +320,7 @@ grid-column: 3/4;
   transform: scale(0.8);
   border-radius: 0px;
   position:relative;
-  transition: transform 0.3s ease;
+  transition: transform 0.5s ease;
 
  }
 
@@ -326,7 +332,7 @@ grid-column: 3/4;
     transform: scale(0.8);
     border-radius: 0px;
     position:relative;
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
   }
     .item-6{
       grid-row: 3/4;
@@ -336,7 +342,7 @@ grid-column: 3/4;
         transform: scale(0.8);
         border-radius: 0px;
         position:relative;
-        transition: transform 0.3s ease;
+        transition: transform 0.5s ease;
       }
         
         .item-7{
@@ -347,7 +353,7 @@ grid-column: 3/4;
             transform: scale(0.8);
             border-radius: 0px;
             position:relative;
-            transition: transform 0.3s ease;
+            transition: transform 0.5s ease;
           }
           .item-8{
             grid-row: 4/5;
@@ -357,27 +363,38 @@ grid-column: 3/4;
               transform: scale(0.8);
               border-radius: 0px;
               position:relative;
-              transition: transform 0.3s ease;
+              transition: transform 0.5s ease;
             }
 
 
 /* --- Item Layout END----ART-----> */
 
-.Logo-type
-  {
-      height: 100%;
-      display: grid;
-      border: 10px;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows:repeat(2, 1fr);
-      grid-gap: 10px 10px;
-      justify-content: center;
-      padding-left: 15px;
-      padding-right: 15px; 
-      transform: scale(0.85);
-      margin-bottom: 20px;
-      margin-top: 0px;
-  }
+/*
+LIGHTBOX STLYING WITH JAVA SCRIPT
+*/
+#lightbox{
+  position:fixed;
+  z-index:1000;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0,0,0,.8);
+  display: none;
+}
+
+#lightbox.active {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#lightbox img{
+  max-width: 90%;
+  max-height: 80%;
+  padding: 8px;
+  border: 2px solid #FFE417;
+  border-radius: 75px;
+}
 
   .item-a{
     grid-row: 1/2 ;
@@ -387,8 +404,8 @@ grid-column: 3/4;
     transform: scale(0.8);
     border-radius: 0px;
     position:relative;
-    transition: transform 0.3s ease;    
-    }
+    transition: transform 0.5s ease;
+  }
 
     .item-b{
     grid-row: 1/2;
@@ -398,8 +415,8 @@ grid-column: 3/4;
       transform: scale(0.8);
     border-radius: 0px;
     position:relative;
-    transition: transform 0.3s ease;
-     }
+    transition: transform 0.5s ease;
+  }
     
     .item-c{
     grid-row: 2/3;
@@ -409,8 +426,8 @@ grid-column: 3/4;
       transform: scale(0.8);
       border-radius: 0px;
       position:relative;
-      transition: transform 0.3s ease;
-     }
+      transition: transform 0.5s ease;
+    }
     
     .item-d{
     grid-row: 2/3;
@@ -420,7 +437,7 @@ grid-column: 3/4;
       transform: scale(0.8);
       border-radius: 0px;
       position:relative;
-      transition: transform 0.3s ease;
+      transition: transform 0.5s ease;
     
      }
     
