--- a/ikeyboydesigns-stylesheet.css
+++ b/ikeyboydesigns-stylesheet.css
@@ -22,7 +22,7 @@ html {
 }
 
 body {
-  background-color: var(--light001);
+  background-color: #9AAFD0;
   height: 100%;
 }
 
@@ -144,7 +144,7 @@ body {
   display: inline-block;
   height: 1px;
   width: 20rem;
-  background-color: var(--dark001);
+  background-color: black;
   margin-bottom: 5px;
   align-items: center;
 }
@@ -180,7 +180,6 @@ body {
   background-color: #FFE417;
   color: var(--dark001);
   border: 2px solid var(--dark001);
-
 }
 
 .info__cta-2:focus,
@@ -189,6 +188,7 @@ body {
   color: var(--dark001);
   outline: 5px solid var(--red001);
 }
+
 /* new button color end */
 .info__cta {
   display: inline-block;
@@ -232,7 +232,6 @@ body {
   margin-left: 40px;
   margin-right: 40px;
 
-  
 }
 
 
@@ -258,6 +257,7 @@ body {
 #text-head{
 text-align: center;
 margin:0 ;
+display: none;
 }
 
 
@@ -266,14 +266,11 @@ margin:0 ;
     grid-template-columns: reapeat(3, 200px);
     justify-content: center;
     align-content: center;
-    grid-gap: 10px;
+    column-gap: 5px;
+    row-gap: 0px;
   }
 
-  .grid img{
-    width: 200px;
-    height: span;
-    cursor: pointer;
-  }
+ 
 
   
 .item-1{
@@ -396,6 +393,20 @@ LIGHTBOX STLYING WITH JAVA SCRIPT
   border-radius: 75px;
 }
 
+
+.item-letters{ 
+  display: grid;
+  align-content: center;
+  column-gap: 0px;
+  row-gap: 15px;
+  
+}
+.item-aa{
+  grid-row: 1/2 ;
+  grid-column: 2/4;
+  Justify-items: center;
+  }
+
   .item-a{
     grid-row: 1/2 ;
     grid-column: 1/2;
@@ -408,8 +419,8 @@ LIGHTBOX STLYING WITH JAVA SCRIPT
   }
 
     .item-b{
-    grid-row: 1/2;
-    grid-column: 2/3;
+    grid-row: 2/3;
+    grid-column: 1/2;
      }
      .item-b:hover{
       transform: scale(0.8);
@@ -420,7 +431,7 @@ LIGHTBOX STLYING WITH JAVA SCRIPT
     
     .item-c{
     grid-row: 2/3;
-    grid-column: 1/2;
+    grid-column: 2/3;
     }
     .item-c:hover{
       transform: scale(0.8);
@@ -431,7 +442,7 @@ LIGHTBOX STLYING WITH JAVA SCRIPT
     
     .item-d{
     grid-row: 2/3;
-    grid-column: 2/3;
+    grid-column: 3/4;
     }
     .item-d:hover{
       transform: scale(0.8);
@@ -443,6 +454,156 @@ LIGHTBOX STLYING WITH JAVA SCRIPT
     
      
 /* CSS Grid Formating Ends */
+
+/* Grid for UI Stuff */
+
+
+.grid-rome{ 
+  display: grid;
+  align-content: center;
+  column-gap: 15px;
+  row-gap: 20px;
+  
+}
+
+
+.item-Z{
+  grid-row: 1/2 ;
+  grid-column: 1/3;
+  Justify-items: center;
+  }
+
+.item-I{
+  grid-row: 1/2 ;
+  grid-column: 3/4;
+  }
+  .item-I:hover{
+  transform: scale(0.8);
+  border-radius: 0px;
+  position:relative;
+  transition: transform 0.5s ease;
+}
+
+  .item-II{
+  grid-row: 1/2;
+  grid-column: 4/5;
+   }
+   .item-II:hover{
+    transform: scale(0.8);
+  border-radius: 0px;
+  position:relative;
+  transition: transform 0.5s ease;
+}
+  
+  .item-III{
+  grid-row: 1/2;
+  grid-column: 5/6;
+  }
+  .item-III:hover{
+    transform: scale(0.8);
+    border-radius: 0px;
+    position:relative;
+    transition: transform 0.5s ease;
+  }
+  
+  .item-IV{
+  grid-row: 2/3;
+  grid-column: 2/3;
+  }
+  .item-IV:hover{
+    transform: scale(0.8);
+    border-radius: 0px;
+    position:relative;
+    transition: transform 0.5s ease;
+  
+   }  .item-V{
+    grid-row: 2/3 ;
+    grid-column: 3/4;
+    }
+    .item-V:hover{
+    transform: scale(0.8);
+    border-radius: 0px;
+    position:relative;
+    transition: transform 0.5s ease;
+  }
+
+    .item-VI{
+    grid-row: 2/3;
+    grid-column: 4/5
+     }
+     .item-VI:hover{
+      transform: scale(0.8);
+    border-radius: 0px;
+    position:relative;
+    transition: transform 0.5s ease;
+  }
+    
+    .item-VII{
+    grid-row: 2/3;
+    grid-column: 5/6;
+    }
+    .item-VII:hover{
+      transform: scale(0.8);
+      border-radius: 0px;
+      position:relative;
+      transition: transform 0.5s ease;
+    }
+    
+    .item-VIII{
+    grid-row: 3/4;
+    grid-column:1/2;
+    }
+    .item-VIII:hover{
+      transform: scale(0.8);
+      border-radius: 0px;
+      position:relative;
+      transition: transform 0.5s ease;
+    
+     }  .item-IX{
+      grid-row: 3/4 ;
+      grid-column: 2/3;
+      }
+      .item-IX:hover{
+      transform: scale(0.8);
+      border-radius: 0px;
+      position:relative;
+      transition: transform 0.5s ease;
+    }
+  
+      .item-X{
+      grid-row: 3/4;
+      grid-column: 3/4;
+       }
+
+       .item-X:hover{
+        transform: scale(0.8);
+      border-radius: 0px;
+      position:relative;
+      transition: transform 0.5s ease;
+    }
+
+     .item-XI{
+      grid-row: 3/4;
+      grid-column: 4/5;
+       }
+       .item-XI:hover{
+        transform: scale(0.8);
+      border-radius: 0px;
+      position:relative;
+      transition: transform 0.5s ease;
+    }
+      
+      .item-XII{
+      grid-row: 3/4;
+      grid-column: 5/6;
+       }
+       .item-XII:hover{
+        transform: scale(0.8);
+      border-radius: 0px;
+      position:relative;
+      transition: transform 0.5s ease;
+    }
+
 
 @media screen and (max-width: 1300px), screen and (max-height: 800px) {
   .main-nav {
@@ -458,12 +619,17 @@ LIGHTBOX STLYING WITH JAVA SCRIPT
     height: 0;
     padding-top: calc(100% - 32px);
   }
+
+
+  
+
 }
 
 @media screen and (max-width: 600px) {
   .group-one,
   .group-two {
     grid-column: 1 / span 2;
-  }
+}
+
   
 }
